# sex_offender_search

./: Cargo.toml  Dockerfile  example.http  sex_offender_search.adoc  sex_offender_ws.code-workspace  test.html
$VIMDATA/: %home%d-rezzer%.config%nvim%init.vim  %home%d-rezzer%.zshrc  %home%d-rezzer%code%eyemetric%sex_offender_search%Dockerfile  %home%d-rezzer%code%eyemetric%sex_offender_search%docs%sex_offender_search.adoc  %home%d-rezzer%code%eyemetric%sex_offender_search%src%main.rs  %home%d-rezzer%code%eyemetric%sex_offender_search%test.asciidoc  %home%d-rezzer%code%rust%scratch%Cargo.toml  %home%d-rezzer%code%rust%scratch%cargo.toml  %home%d-rezzer%code%rust%scratch%src%main.rs
docs/: sex_offender_search.adoc  sex_offender_search.html
src/: main.rs
