[package]
name = "sex_offender_search"
version = "0.1.0"
authors = ["d-rezzer"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.1"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
bytes = "0.5"
base64 = "0.11.0"
user_pass = { git = "https://github.com/brightblade42/user_pass.git"}
[dependencies.rusqlite]
version = "0.19.0"
features = ["bundled"]